--- a/ITSupport.Web/ITSupport.Web.csproj
+++ b/ITSupport.Web/ITSupport.Web.csproj
@@ -92,7 +92,6 @@
     <Reference Include="System.Web.Abstractions" />
     <Reference Include="System.Web.Routing" />
     <Reference Include="System.Xml" />
-    <Reference Include="System.Configuration" />
     <Reference Include="System.Web.Services" />
     <Reference Include="System.EnterpriseServices" />
     <Reference Include="Microsoft.Web.Infrastructure, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
@@ -152,13 +151,9 @@
     <Compile Include="Controllers\BuscaController.cs" />
     <Compile Include="Controllers\CadastroController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
-    <Compile Include="Models\Busca.cs" />
-    <Compile Include="Models\Contexto.cs" />
-    <Compile Include="Models\Objeto.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\Repositorio.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -230,7 +225,7 @@
     <Content Include="Scripts\jquery-1.10.2.min.map" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="C:\Users\andre_abreu_trp\Documents\Visual Studio 2015\Projects\ITSupport\ITSupport.Contexto\ITSupport.Lib.csproj">
+    <ProjectReference Include="..\ITSupport.Contexto\ITSupport.Lib.csproj">
       <Project>{9f5b8eb8-3286-4ea6-9938-548a2079cb6f}</Project>
       <Name>ITSupport.Lib</Name>
     </ProjectReference>
