Implementacao do Modal

--- a/ITSupport.WebAdmin/ITSupport.WebAdmin.csproj
+++ b/ITSupport.WebAdmin/ITSupport.WebAdmin.csproj
@@ -153,7 +153,6 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\CadastroModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -2874,6 +2873,7 @@
     <Folder Include="assets\plugins\jquery-inputlimiter\.svn\tmp\prop-base\" />
     <Folder Include="assets\plugins\jquery-inputlimiter\.svn\tmp\props\" />
     <Folder Include="assets\plugins\jquery-inputlimiter\.svn\tmp\text-base\" />
+    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
@@ -3319,6 +3319,15 @@
       <Project>{9f5b8eb8-3286-4ea6-9938-548a2079cb6f}</Project>
       <Name>ITSupport.Lib</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Shared\_LayoutModal.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Cadastro\Fabricante.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Cadastro\Modelo.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
