--- a/ITSupport.WebAdmin/ITSupport.WebAdmin.csproj
+++ b/ITSupport.WebAdmin/ITSupport.WebAdmin.csproj
@@ -3329,6 +3329,9 @@
   <ItemGroup>
     <Content Include="Views\Cadastro\Modelo.cshtml" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Properties\PublishProfiles\ITOne.pubxml" />
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
